Fix veil zoom-image sizing on mobile

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -679,7 +679,7 @@ ul li {
 .veil {
 	position: fixed;
 	display: none;
-	z-index: 20;
+	z-index: 11;
 	width: 100%;
 	height: 100%;
 	top: 0;
@@ -975,7 +975,7 @@ RESPONSIVENESS
 
 	.zoom-image {
 		width: 100%;
-		height: 100%;
+		height: 50%;
 	}
 }
 
